# flask-deploy

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  test.py  wsgi.py
blog/: admin.py  app.py  blog.db  config.py  models.py
blog/api/: article.py  author.py  tag.py  user.py
blog/articles/: views.py
blog/auth/: views.py
blog/authors/: views.py
blog/forms/: article.py  auth.py  user.py
blog/permission/: article.py  user.py
blog/schemas/: __init__.py  article.py  author.py  tag.py  user.py
blog/templates/admin/: index.html
blog/templates/articles/: articles_by_tag.html  create.html  detail.html  list.html  update.html
blog/templates/auth/: login.html
blog/templates/authors/: list.html
blog/templates/macro/: formhelpers.html
blog/templates/users/: base.html  detail.html  footer.html  list.html  navbar.html  register.html
blog/user/: views.py
instance/: blog.db
migrations/versions/: 52f6c42d0e33_.py  f5c5bd0be89b_.py
